# guide-analysis.hail.is

./: .dockerignore  .gitignore  Dockerfile  GUIDE_browser_llm_prompt.txt  README.md  app.py  colors.txt  decomposition.py  docker-compose.yml  download-data.py  generate_great_file.py  guide-analysis.service  llm_out.json  misc.py  nginx.conf  pheno_table.tsv  pheno_table_enhanced.csv  plotting.py  pyproject.toml  snplist.txt  testing.py
deploy/: guide-analysis.service  nginx.conf
scripts/: compute_log10pv_mmap.py
