[project]
name = "guide-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "shiny>=1.5.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "google-cloud-storage>=3.8.0",
]
